# KnowledgeExtraction

./: .gitignore  README.md  pyproject.toml
containers/: Dockerfile.vanilla  README.md  compose.yml
containers/database-migrations/: V1__Initial_Schema.sql  V2__Set_Search_Path.sql  V3__Setup_Hybrid_Search.sql
containers/v1/: Dockerfile.ai  Dockerfile.custom  README.md  compose.yml
containers/v1/database-migrations/: V1__Initial_Schema.sql
containers/v2/: Dockerfile  README.md  README_docker.md  compose.yml  entrypoint.sh  mock.env
containers/v2/database-migrations/: V1__rag_schema.sql
containers/v2/sql/: 01_setup_vectorizer.sql  02_hybrid_rag_queries.sql  03_llm_postprocessing.sql
nlp_utils/: README.md  __init__.py  nlp_tokenizer.py
test_data/: sample_text.txt  seed_data.py
utils/: KGEmbedder.py  KG_extraction_utils.py  __init__.py  chunking_utils.py  db_retriever.py  embeddings_wrappers.py  lexical_utils.py  retrieval_utils.py
