[project]
name = "KnowledgeExtraction"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.41",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pip>=26.0.1",
    "sentence-transformers>=5.2.3",
    "spacy>=3.8.11",
    "tiktoken>=0.12.0",
    "transformers>=5.2.0",
]
